--- a/Tests/Toolbox.UWP.Test/Toolbox.UWP.Test.csproj
+++ b/Tests/Toolbox.UWP.Test/Toolbox.UWP.Test.csproj
@@ -1,21 +1,25 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp3.0</TargetFramework>
+    <TargetFramework>netcoreapp3.1</TargetFramework>
 
     <IsPackable>false</IsPackable>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.2.0" />
-    <PackageReference Include="xunit" Version="2.4.0" />
-    <PackageReference Include="xunit.runner.visualstudio" Version="2.4.0" />
-    <PackageReference Include="coverlet.collector" Version="1.0.1" />
+    <PackageReference Include="NFluent" Version="2.6.0" />
+    <PackageReference Include="NSubstitute" Version="4.2.1" />
+    <PackageReference Include="nunit" Version="3.12.0" />
+    <PackageReference Include="NUnit3TestAdapter" Version="3.16.1">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.4.0" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\ToolBox.Common\Toolbox.Common.csproj" />
-    <ProjectReference Include="..\Toolbox.UWP\Toolbox.UWP.csproj" />
+    <ProjectReference Include="..\..\ToolBox.Common\Toolbox.Common.csproj" />
+    <ProjectReference Include="..\..\Toolbox.UWP\Toolbox.UWP.csproj" />
   </ItemGroup>
 
 </Project>
